<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Real Remote</string>
    <string name="cool">Cool</string>
    <string name="dry">Dry</string>
    <string name="heat">Heat</string>
    <string name="fan">Fan</string>
    <string name="temperature" translatable="false">27</string>
    <string name="scale">ºC</string>
    <string name="connection_error">Could not make the changes. Connection error</string>
    <string name="sign_fan" translatable="false"><![CDATA[>>>]]></string>
    <string name="mode_description">Mode</string>
    <string name="off_description">Off</string>
    <string name="tempplus_description">Plus one degree</string>
    <string name="temp_description">Temperature</string>
    <string name="tempminus_description">Minus one degree</string>
    <string name="swing_description">Swing</string>
    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">Real Remote settings</string>
    <string name="settings_address_label">Server address</string>
    <string name="settings_address_key" translatable="false">address</string>
    <string name="settings_port_label">Server port</string>
    <string name="settings_port_key" translatable="false">port</string>
    <string name="settings_username_key" translatable="false">username</string>
    <string name="settings_username_label">Username</string>
    <string name="settings_password_key" translatable="false">password</string>
    <string name="settings_password_label">Password</string>
    <string name="settings_certificate_key" translatable="false">certificate</string>
    <string name="settings_certificate_label">SSL certificate file</string>
    <string name="server_data_missing">Server data is missing. Please go to settings and complete them</string>
    <string name="send_description">Send code</string>
    <string name="onoff_description">On / Off</string>
    <string name="is_off_message">System is Off. Can\'t change swing</string>
    <string name="auto">Auto</string>
    <string name="action_settings">Settings</string>
    <string name="settings_file_label">Certificate file</string>
    <string name="settings_file_key" translatable="false">certificate</string>
    <string name="no_file_permission">Accessing files is required for SSL communication</string>
    <string name="settings_selected_file">"Selected file: "</string>
    <string name="settings_name_label">Name</string>
    <string name="transition_name" translatable="false">transition_name</string>
    <string name="settings_brand_label">Brand</string>
    <string name="settings_alias_label">Alias</string>
    <string name="unsaved_changes_dialog_msg">Do you want to discard the changes?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep editing</string>
    <string name="edit_save">Save</string>
    <string name="settings_certificate_button">Choose file…</string>
    <string name="settings_editAA">Edit air conditioner</string>
    <string name="confirm_delete_dialog_msg">Are you sure you want to remove this Air Conditioner?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="edit_incomplete_title">Error creating AC</string>
    <string name="edit_incomplete_message">All fields must be fulfilled to add/modify an AC. Please review your settings and try again.</string>
    <string name="ok">OK</string>
    <string name="main_empty_database">There are no Air Conditioners set. Please go to settings and set your devices.</string>
    <string-array name="AAArray" translatable="false">
        <item>Kaysun</item>
        <item>ProKlima</item>
    </string-array>
    <string name="on_description">On</string>
    <string name="command_ok">Command executed correctly</string>
    <string name="ir_error">Command sent correctly but could not send it to the AC</string>
</resources>