<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/tempPlus"
        android:layout_width="96dp"
        android:layout_height="32dp"
        android:layout_centerInParent="true"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/tempplus_description"
        android:src="@drawable/temp_plus"
        app:layout_constraintEnd_toStartOf="@+id/fanButton"
        app:layout_constraintStart_toEndOf="@+id/modeButton"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <ImageView
        android:id="@+id/tempMiddle"
        android:layout_width="96dp"
        android:layout_height="32dp"
        android:layout_centerInParent="true"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/temp_description"
        android:src="@drawable/temp_middle"
        app:layout_constraintEnd_toStartOf="@+id/fanButton"
        app:layout_constraintStart_toEndOf="@+id/modeButton"
        app:layout_constraintTop_toBottomOf="@+id/tempPlus" />

    <ImageView
        android:id="@+id/tempMinus"
        android:layout_width="96dp"
        android:layout_height="32dp"
        android:layout_centerInParent="true"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/tempminus_description"
        android:src="@drawable/temp_minus"
        app:layout_constraintEnd_toStartOf="@+id/fanButton"
        app:layout_constraintStart_toEndOf="@+id/modeButton"
        app:layout_constraintTop_toBottomOf="@+id/tempMiddle" />

    <ImageView
        android:id="@+id/fanButton"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_alignBottom="@id/tempMinus"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/fan"
        android:src="@drawable/fan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/modeButton"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_alignBottom="@id/tempMinus"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/mode_description"
        android:src="@drawable/mode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/offButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/off_description"
        android:src="@drawable/off"
        app:layout_constraintEnd_toStartOf="@+id/swingButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/onButton"
        app:layout_constraintTop_toBottomOf="@+id/tempMinus"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <ImageView
        android:id="@+id/sendButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_below="@id/tempMinus"
        android:layout_marginTop="32dp"
        android:layout_toStartOf="@id/offButton"
        android:contentDescription="@string/send_description"
        android:src="@drawable/send"
        app:layout_constraintEnd_toStartOf="@+id/onButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tempMinus" />

    <ImageView
        android:id="@+id/swingButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/swing_description"
        android:src="@drawable/swing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/offButton"
        app:layout_constraintTop_toBottomOf="@+id/tempMinus"
        tools:layout_constraintTop_creator="1" />

    <ImageView
        android:id="@+id/onButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/on_description"
        app:layout_constraintEnd_toStartOf="@+id/offButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sendButton"
        app:layout_constraintTop_toBottomOf="@+id/tempMinus"
        app:srcCompat="@drawable/on" />
</android.support.constraint.ConstraintLayout>