<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/autoMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/auto"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />
    <TextView
        android:id="@+id/coolMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/cool"
        android:visibility="invisible"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/autoMode"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />
    <TextView
        android:id="@+id/dryMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/dry"
        android:visibility="invisible"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/coolMode"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />
    <TextView
        android:id="@+id/heatMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/heat"
        android:visibility="invisible"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/dryMode"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />
    <TextView
        android:id="@+id/fanMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/fan"
        android:visibility="invisible"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/heatMode"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <View
        android:id="@+id/lineView"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/modeListLayout"
        android:background="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/fanShowCurrent"
        app:layout_constraintLeft_toRightOf="@+id/dryMode"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/onOffSign"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@id/modeListLayout"
        android:contentDescription="@string/onoff_description"
        android:src="@drawable/onoff_symbol"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="4dp"
        app:layout_constraintLeft_toRightOf="@+id/lineView"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/tempView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_toEndOf="@id/lineView"
        android:gravity="center"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/temperature"
        android:textSize="100sp"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toLeftOf="@+id/textView"
        android:layout_marginRight="0dp"
        app:layout_constraintLeft_toRightOf="@+id/lineView"
        android:layout_marginLeft="8dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_toEndOf="@id/tempView"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:text="@string/scale"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:id="@+id/textView"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/fanShowCurrent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tempView"
        android:layout_marginStart="12dp"
        android:layout_toEndOf="@id/lineView"
        android:background="@android:color/black"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center_vertical"
        android:padding="2dp"
        android:text="@string/fan"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:visibility="visible"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tempView"
        app:layout_constraintLeft_toRightOf="@+id/lineView"
        android:layout_marginLeft="8dp" />
    <TextView
        android:id="@+id/fanLevel1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/fanShowCurrent"
        android:layout_gravity="center_vertical"
        android:layout_toEndOf="@id/fanShowCurrent"
        android:fontFamily="sans-serif-condensed"
        android:paddingLeft="1dp"
        android:paddingRight="1dp"
        android:text="@string/sign_fan"
        android:visibility="invisible"
        app:layout_constraintLeft_toRightOf="@+id/fanShowCurrent"
        android:layout_marginLeft="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/fanShowCurrent" />
    <TextView
        android:id="@+id/fanLevel2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/fanShowCurrent"
        android:layout_gravity="center_vertical"
        android:layout_toEndOf="@id/fanLevel1"
        android:fontFamily="sans-serif-condensed"
        android:paddingLeft="1dp"
        android:paddingRight="1dp"
        android:text="@string/sign_fan"
        android:visibility="invisible"
        app:layout_constraintBaseline_toBaselineOf="@+id/fanShowCurrent"
        app:layout_constraintLeft_toRightOf="@+id/fanLevel1"
        android:layout_marginLeft="0dp" />
    <TextView
        android:id="@+id/fanLevel3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/fanShowCurrent"
        android:layout_gravity="center_vertical"
        android:layout_toEndOf="@id/fanLevel2"
        android:fontFamily="sans-serif-condensed"
        android:paddingLeft="1dp"
        android:paddingRight="1dp"
        android:text="@string/sign_fan"
        android:visibility="invisible"
        app:layout_constraintBaseline_toBaselineOf="@+id/fanShowCurrent"
        app:layout_constraintLeft_toRightOf="@+id/fanLevel2"
        android:layout_marginLeft="0dp" />
    <TextView
        android:id="@+id/fanLevelAuto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/fanShowCurrent"
        android:layout_gravity="center_vertical"
        android:layout_toEndOf="@id/fanLevel3"
        android:fontFamily="sans-serif-condensed"
        android:paddingLeft="1dp"
        android:paddingRight="1dp"
        android:text="@string/auto"
        android:textAllCaps="true"
        android:visibility="visible"
        app:layout_constraintBaseline_toBaselineOf="@+id/fanShowCurrent"
        app:layout_constraintLeft_toRightOf="@+id/fanLevel3"
        android:layout_marginLeft="0dp" />

</android.support.constraint.ConstraintLayout>